--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,7 +8,8 @@ jobs:
     matrix:
       node-version: [ 20.x ]
   steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v4
     - name: Starting Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
