--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,11 +6,10 @@ jobs:
     runs-on: ubuntu-latest
   strategy:
     matrix:
-      node-version: [ 20.x ]
+      node-version: ['20.x']
   steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-    - name: Starting Node.js ${{ matrix.node-version }}
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
