--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "react-scripts build & gh-pages -d build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint . **/*.{js,jsx}",
+    "lint:fix": "eslint . **/*.{js,jsx} --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +48,11 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.1.0",
     "prettier": "3.1.1"
   }
