add lint in yml and fix eslint error

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,3 +19,5 @@ jobs:
         run: npm run build
       - name: test project
         run: npm run test
+      - name: lint project
+        run: npm run lint
