--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "admin-page",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dryaginmihael.github.io/bit-test-admin",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
