--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "plugin:react-hooks/recommended",
     "plugin:import/recommended",
     "airbnb",
+    "plugin:react-redux/recommended",
     "plugin:react/jsx-runtime",
     "prettier"
   ],
@@ -24,6 +25,7 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prop-types": "off",
+    "no-param-reassign": "off",
     "radix": 0,
     "jsx-a11y/no-static-element-interactions": [
       "off",
